# budgie-desktop

./: .clang-format  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitmodules  HACKING  Makefile.am  README.md  README.rst  TODO.md  autogen.sh  common.h  common.mk  configure.ac  findTranslatablesPlease.sh  flick_raven.sh  gio-2.0.vapi  gio-unix-2.0.vapi  glib-2.0.vapi  gvc-1.0.vapi  issue-fixed.md  meson.build  meson_options.txt  meson_post_install.sh  mkrelease.sh  open_settings.sh  sparse_it.sh  test.sh  updatePot.sh  update_format.sh
budgie-plugin/: BudgiePlugin.vala  Makefile.am  budgie-1.0.pc.in  budgie-1.0.vapi
daemon/: Makefile.am  budgie-daemon.desktop.in.in  budgie-daemon.gresource.xml  configure.ac  endsession.vala  main.vala  manager.vala  osd.ui  osd.vala
data/: Makefile.am  app.css  arc-panel.desktop.in  arc-panel.gresource.xml  budgie-desktop.desktop  budgie-desktop.desktop.in  budgie-panel.desktop.in  budgie-panel.gresource.xml  budgie-settings.desktop.in  com.evolve-os.budgie.panel.gschema.xml  com.evolve-os.budgie.panel.object.gschema.xml  com.solus-project.arc-panel.gschema.xml  com.solus-project.budgie-menu.gschema.xml  com.solus-project.budgie-panel.gschema.xml  default.css  dialog.css  endsession.ui  glade.css  layout.ini  meson.build  panel.ini  rundialog-style.css  rundialog.gresource.xml  session-dialog.gresource.xml  style.css  style_313.css
data/icons/: README
data/theme/: README.md  assets.txt  default.css  gulpfile.js  style.css  theme.css  theme_hc.css
docs/: Makefile.am  budgie-desktop-docs.sgml  budgie-desktop-docs.xml  budgie-desktop.types  meson.build
imports/: Makefile.am  configure.ac
imports/natray/: Makefile.am  fixedtip.c  na-tray-child.c  na-tray-child.h  na-tray.c  natray-1.0.vapi
lib/: Makefile.am  animation.vala  manager.vala  shadow.vala  toplevel.vala  toplevel.vapi
libsession/: Makefile.am  libsession.vala  libsession.vapi
panel/: BudgiePanel.vala  Editor.vala  IconSelect.vala  Makefile.am  PanelMover.vala  arc-panel.desktop.in  arc-panel.desktop.in.in  budgie-panel-main.c  budgie-panel.c  budgie-panel.desktop.in.in  budgie-panel.h  endsession.vala  icon-tasklist.c  icon-tasklist.h  main.vala  manager.vala  panel-applet.c  panel-applet.h  panel.vala  panelconfig.h  panelconfig.vapi  popovers.vala  utils.vala  uuid.vala  xutils.c  xutils.h
panel/applets/: Makefile.am  clock-applet.c  clock-applet.h  menu-applet.c  menu-applet.h  menu-window.c  menu-window.h  power-applet.c  power-applet.h  sound-applet.c  sound-applet.h  windowlist-applet.c  windowlist-applet.h
panel/common/: budgie-popover.c  budgie-popover.h
plugin/: ArcPlugin.vala  BudgiePlugin.vala  Makefile.am  applet-info.c  applet-info.h  applet.c  applet.h  arc-1.0.pc  arc-1.0.vapi  budgie-1.0.pc.in  budgie-1.0.vapi  budgie-enums.h.template  plugin.c  plugin.h  popover-manager.c  popover-manager.h
po/: LINGUAS  POTFILES.in  POTFILES.skip  ar.po  arc-desktop.pot  bg_BG.po  bn.po  budgie-desktop.pot  ca.po  cs.po  da.po  de.po  de_DE.po  el_GR.po  en_GB.po  en_US.po  eo.po  es.po  es_419.po  es_AR.po  es_CL.po  es_ES.po  es_MX.po  es_PE.po  es_US.po  eu.po  fi.po  fr.po  fr_BE.po  fr_FR.po  ga.po  gl.po  gl_ES.po  he.po  hr.po  hr_HR.po  hu.po  hu_HU.po  id.po  id_ID.po  (+38 more)
polkit/: Makefile.am  budgie-polkit.gresource.xml  configure.ac  dialog.ui  polkitdialog.vala
raven/: Makefile.am  brightness.vala  calendar.vala  calender.vala  headerwidget.vala  main_view.vala  notifications_view.vala  powerstrip.vala  raven.vala  raven.vapi  settings_view.vala  sound.vala  themes.vala
raven/mpris/: MprisClient.c  MprisClient.vala  MprisGui.c  MprisGui.vala  MprisWidget.c  MprisWidget.vala
raven/ui/: appearance.ui  applet_settings.ui  applets.ui  arc-raven.gresource.xml  background.ui  budgie-raven.gresource.xml  fonts.ui  notification.ui  notification_clone.ui  panel.ui  settings.ui  wm.ui
rundialog/: Makefile.am  RunDialog.vala  rundialog.gresource.xml
session/: BudgieSession.vala  Makefile.am  arc-desktop.desktop.in  arc-desktop.desktop.in.in  arc-desktop.in  arc-desktop.session.in  arc-desktop.session.in.in  budgie-desktop-polkit-gnome-authentication-agent-1.desktop.in  budgie-desktop.desktop.in.in  budgie-desktop.in  budgie-desktop.session.in.in  budgie-session-dialog-main.c  budgie-session-dialog.c  budgie-session-dialog.h  budgie-session.c  org.freedesktop.DisplayManager.Seat.xml  org.freedesktop.login1.xml  sessionconfig.h  sessionconfig.vapi
src/: Makefile.am  meson.build
src/abomination/: Abomination.vala  AbominationAppGroup.vala  AbominationRunningApp.vala  AppGroup.vala  RunningApp.vala  abomination.vala  meson.build  utils.vala
src/applets/: Makefile.am  meson.build
src/appsys/: AppSystem.vala  appsys.vapi  meson.build
src/config/: Makefile.am  budgie-config.c  budgie-config.h  budgie-config.vapi  configure.ac  meson.build
src/daemon/: Makefile.am  budgie-daemon.desktop.in  budgie-daemon.gresource.xml  configure.ac  endsession.ui  endsession.vala  main.vala  manager.vala  menus.vala  meson.build  osd.ui  osd.vala  settings.vala  tabswitcher.ui  tabswitcher.vala
src/imports/: configure.ac  meson.build
src/lib/: Makefile.am  animation.vala  manager.vala  meson.build  shadow.vala  toplevel.vala  toplevel.vapi
src/libsession/: Makefile.am  libsession.vala  libsession.vapi  meson.build
src/panel/: Makefile.am  budgie-desktop-settings.desktop.in  budgie-desktop-settings.vala  (+10 more)
theme/: Makefile.am  README.md  assets.txt  budgie-theme-1.0.pc.in  budgie-theme.gresource.xml  gulpfile.js  render-assets.sh  theme-manager.c  theme-manager.h  theme.c  theme.css  theme.h  theme.vapi  theme_hc.css
widgets/: Animation.vala  BudgiePopover.vala  BudgieSidebar.vala  BudgieWidgets.vapi  InkManager.vala  Makefile.am  PaperButton.vala
wm/: Makefile.am  arc-wm.desktop.in  background.vala  budgie-wm.c  budgie-wm.desktop.in  com.solus-project.arc.wm.gschema.xml  com.solus-project.budgie.wm.gschema.xml  core.c  ibus.vala  impl.h  keyboard.vala  legacy.c  legacy.h  main.vala  plugin.c  plugin.h  plugin_314.c  shim.vala  windowmenu.vala  wm.vala
(+612 files in other folders)
