ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS =

EXTRA_DIST = \
	${top_srcdir}/common.mk \
	${top_srcdir}/README.rst \
	${top_srcdir}/LICENSE \
	${top_srcdir}/vapi/gvc-1.0.vapi
	${top_srcdir}/vapi/libmutter.vapi
	${top_srcdir}/vapi/libmutter.deps
	${top_srcdir}/vapi/libuuid.vapi
NULL =
CLEANFILES =

SUBDIRS = \
	data \
	gvc \
	plugin \
	panel
