ACLOCAL_AMFLAGS = -I m4
AM_CFLAGS =

EXTRA_DIST = \
	${top_srcdir}/common.mk \
	${top_srcdir}/README.md \
	${top_srcdir}/LICENSE \
	${top_srcdir}/LICENSE.LGPL2.1 \
	${top_srcdir}/vapi/gvc-1.0.vapi \
	${top_srcdir}/vapi/libmutter.vapi \
	${top_srcdir}/vapi/libmutter.deps \
	${top_srcdir}/vapi/libuuid.vapi \
	${top_srcdir}/vapi/gnome-desktop-3.0.vapi \
	${top_srcdir}/vapi/gsettings-desktop-schemas.vapi

NULL =
CLEANFILES =

SUBDIRS = \
	data \
	gvc \
	plugin \
	lib \
	raven \
	panel \
	session \
	wm \
	po
